# ghc-sort-perf

./: CHANGELOG.md  README.md  sort-perf.cabal
app/: ComparisonProvider.hs  Main.hs
app/Sorts/: New.hs  New3N.hs  New3WM.hs  New3WMOpt.hs  New4N.hs  New4WM.hs  New4WMAlt.hs  New4WMOpt.hs  New4WMParallel.hs  New5WM.hs  New5WMBinPart.hs  NewStrict.hs  Old.hs
