cabal-version:      2.4
name:               sort-perf
version:            0.1.0.0
author:             Jade
maintainer:         Nils.Jadefalke@gmail.com
extra-source-files: CHANGELOG.md

benchmark sort-perf
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    build-depends:    tagged, deepseq, random, tasty, tasty-quickcheck, tasty-bench, base
    other-modules:    ComparisonProvider,
                      Sorts.New
                      Sorts.Old
    ghc-options:      -Wall -XBangPatterns
    ghc-options:      "-with-rtsopts=-A32m"
    ghc-options:      -fproc-alignment=64
    hs-source-dirs:   app
    default-language: Haskell2010
